--- a/scratch.html
+++ b/scratch.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ashton's Scratch Page</title>
-  <link href="scratch.css" rel="stylesheet">
+  <link href="css/scratch.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -14,7 +14,7 @@
     <a href="#about">About</a>
     <a href="#content">Picture</a>
     <a href="game.html">Catch the Button Game</a>
-    <a href="../index.html">Back to Main</a>
+    <a href="Website1.html">Back to Resume</a>
   </nav>
   <main>
     <section id="about">
