--- a/game.html
+++ b/game.html
@@ -58,6 +58,6 @@
       <a href="scratch.html" class="btn btn-primary">Back to Scratch Page</a>
     </div>
   </main>
-  <script src="game.js"></script>
+  <script src="js/game.js"></script>
 </body>
 </html>
